--- a/css/theme/dhellmann.css
+++ b/css/theme/dhellmann.css
@@ -49,7 +49,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #000;
-  font-family: "News Cycle", Impact, sans-serif;
+  font-family: "Montserrat", Impact, sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
@@ -312,33 +312,6 @@ body {
 
 .reveal small {
   font-size: 0.5em; }
-
-.reveal .slides section {
-  /* lineselect.js */
-  /* lineselect.js */ }
-  .reveal .slides section .fragment.highlight-yellow, .reveal .slides section .fragment.highlight-current-yellow {
-    opacity: 1;
-    visibility: inherit; }
-  .reveal .slides section .fragment.highlight-yellow.visible {
-    background-color: yellow;
-    border: 3px solid black; }
-  .reveal .slides section .fragment.highlight-current-yellow.current-fragment {
-    background-color: yellow;
-    border: 3px solid black; }
-  .reveal .slides section pre span.selected {
-    border: .15em solid #f66;
-    padding: .15em .15em .05em .15em;
-    margin: -.30em -.30em -.20em -.30em;
-    font-weight: bold; }
-  .reveal .slides section code span.selected {
-    border: .15em solid yellow;
-    background-color: yellow;
-    padding: .15em .15em .05em .15em;
-    margin: -.30em -.30em -.20em -.30em;
-    font-weight: bold; }
-
-.reveal aside.controls-off {
-  visibility: hidden; }
 
 .reveal .creativecommons {
   font-size: 0.4em; }
